# genlocov2_controllers

./: CMakeLists.txt  README.md  genlocov2_controllers.xml  legged_template_controller.xml  package.xml
.github/: rename.sh
.github/workflows/: rename.yml
include/genlocov2_controllers/: ActionFilter.h  Genlocov2Controllers.h  ObsShaper.h
include/legged_template_controller/: TemplateController.h
src/: ActionFilter.cpp  Genlocov2Controllers.cpp  ObsShaper.cpp  TemplateController.cpp
